force-app/main/default/objects/Opportunity/fields/Account_AM__c.field-meta.xml
<CustomField>
    <fullName>Account_AM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account AM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>