force-app/main/default/objects/Opportunity/fields/Account_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Health_Score__c</fullName>
    <description>MIS-4169</description>
    <formula>Account.Health_Score__c</formula>
    <label>Product Engagement Score</label>
    <type>Text</type>
</CustomField>