force-app/main/default/objects/Opportunity/fields/Account_KYC_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Account_KYC_Indicator__c</fullName>
    <description>MIS-1310 (used in KYC templates: KYC_final_blue, KYC_final_green, KYC_Final_Red, KYC_First_RED (flow: Screening Case - Record Triggered Flow - After Save))</description>
    <formula>Account.KYC_indicator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account KYC Indicator</label>
    <type>Text</type>
</CustomField>