force-app/main/default/objects/Opportunity/fields/Account_owner_changed__c.field-meta.xml
<CustomField>
    <fullName>Account_owner_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account owner changed</label>
    <type>Checkbox</type>
</CustomField>