force-app/main/default/objects/Opportunity/fields/Account_Owner_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Manager_Email__c</fullName>
    <description>MIS-1310</description>
    <label>Account Owner Manager Email</label>
    <type>Email</type>
</CustomField>