force-app/main/default/objects/Opportunity/fields/Account_Risk_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Account_Risk_Resolution__c</fullName>
    <description>MIS-1310 (used in KYC_final_blue email template (flow: Screening Case - Record Triggered Flow - After Save))</description>
    <formula>Account.Risk_Resolution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Risk Resolution</label>
    <type>Text</type>
</CustomField>