force-app/main/default/objects/Opportunity/fields/Account_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Account_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Trigger</label>
    <type>Checkbox</type>
</CustomField>