force-app/main/default/objects/Opportunity/fields/Account_URL_link__c.field-meta.xml
<CustomField>
    <fullName>Account_URL_link__c</fullName>
    <description>MIS-2388</description>
    <formula>Account.CP_Account_URL_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account URL link</label>
    <type>Text</type>
</CustomField>