force-app/main/default/objects/Opportunity/fields/Acquired_Company__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Company__c</fullName>
    <label>Acquired Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newslever</fullName>
            </value>
            <value>
                <fullName>The Search Monitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>