force-app/main/default/objects/Opportunity/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <inlineHelpText>Additional information on the discount reason</inlineHelpText>
    <label>Discount Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>