force-app/main/default/objects/Opportunity/fields/Additional_Raw_Data_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Raw_Data_Details__c</fullName>
    <label>Additional Raw Data Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>