force-app/main/default/objects/Opportunity/fields/Adjusted_ARR__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_ARR__c</fullName>
    <description>MIS-7858</description>
    <inlineHelpText>Manual ARR correction for closed-won opportunities. Editable by Deal Desk only.</inlineHelpText>
    <label>Adjusted ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>