force-app/main/default/objects/Opportunity/fields/Adjusted_ARR_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_ARR_Timestamp__c</fullName>
    <description>MIS-7858</description>
    <inlineHelpText>Latest timestamp when Adjusted ARR was modified.</inlineHelpText>
    <label>Adjusted ARR Timestamp</label>
    <type>DateTime</type>
</CustomField>