force-app/main/default/objects/Opportunity/fields/Adjusted_Cycle_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Cycle_Price__c</fullName>
    <formula>Cycle_Price__c *Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cycle Price * Probability</inlineHelpText>
    <label>Adjusted Cycle Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>