force-app/main/default/objects/Opportunity/fields/Adjusted_Delta_ARR__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Delta_ARR__c</fullName>
    <description>MIS-7858</description>
    <formula>IF(Adjusted_ARR__c &gt; 0, Adjusted_ARR__c - ARR__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between ARR and Adjusted ARR (calculated automatically).</inlineHelpText>
    <label>Adjusted Delta ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>