force-app/main/default/objects/Opportunity/fields/Admetricks__c.field-meta.xml
<CustomField>
    <fullName>Admetricks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admetricks</label>
    <type>Checkbox</type>
</CustomField>