force-app/main/default/objects/Opportunity/fields/Advisory_Services__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-2073</description>
    <label>Advisory Services</label>
    <type>Checkbox</type>
</CustomField>