force-app/main/default/objects/Opportunity/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(IsClosed, CloseDate-DateValue(CreatedDate), Today()-DateValue(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>