force-app/main/default/objects/Opportunity/fields/AI_Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>AI_Churn_Reason__c</fullName>
    <label>AI Churn Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closed_Lost_Reason_Values</valueSetName>
    </valueSet>
</CustomField>