force-app/main/default/objects/Opportunity/fields/AI_Churn_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>AI_Churn_Reason_Description__c</fullName>
    <label>AI Churn Reason Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>