force-app/main/default/objects/Opportunity/fields/AI_Gap_Category__c.field-meta.xml
<CustomField>
    <fullName>AI_Gap_Category__c</fullName>
    <label>AI Gap Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Gap</fullName>
            </value>
            <value>
                <fullName>Feature Gap</fullName>
            </value>
            <value>
                <fullName>Coverage Gap</fullName>
            </value>
            <value>
                <fullName>Granularity Gap</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>