force-app/main/default/objects/Opportunity/fields/AI_Json_Payload__c.field-meta.xml
<CustomField>
    <fullName>AI_Json_Payload__c</fullName>
    <description>MIS-7356</description>
    <label>AI Json Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>