force-app/main/default/objects/Opportunity/fields/AI_Product_Gaps_Description_Original__c.field-meta.xml
<CustomField>
    <fullName>AI_Product_Gaps_Description_Original__c</fullName>
    <label>AI Product Gaps Description - Original</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>