force-app/main/default/objects/Opportunity/fields/AI_Undelivered_Use_Cases_Original__c.field-meta.xml
<CustomField>
    <fullName>AI_Undelivered_Use_Cases_Original__c</fullName>
    <label>AI Undelivered Use Cases - Original</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No undelivered use cases</fullName>
            </value>
            <value>
                <fullName>Account management</fullName>
            </value>
            <value>
                <fullName>Affiliate management</fullName>
            </value>
            <value>
                <fullName>Apps intelligence</fullName>
            </value>
            <value>
                <fullName>Audience Research</fullName>
            </value>
            <value>
                <fullName>Competitive Benchmarking</fullName>
            </value>
            <value>
                <fullName>Consultative Sales</fullName>
            </value>
            <value>
                <fullName>Consumer Demand</fullName>
            </value>
            <value>
                <fullName>Content planning</fullName>
            </value>
            <value>
                <fullName>Data Integration</fullName>
            </value>
            <value>
                <fullName>Demand planning</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Keyword Research</fullName>
            </value>
            <value>
                <fullName>Lead enrichment</fullName>
            </value>
            <value>
                <fullName>Market Analysis</fullName>
            </value>
            <value>
                <fullName>Marketplace sales optimization</fullName>
            </value>
            <value>
                <fullName>No Fit</fullName>
            </value>
            <value>
                <fullName>On-site search optimization</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paid Acquisition optimization</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Shopper Behavior</fullName>
            </value>
            <value>
                <fullName>Social Media competitive analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>