force-app/main/default/objects/Opportunity/fields/Annual_price_increase_on_T_C_s__c.field-meta.xml
<CustomField>
    <fullName>Annual_price_increase_on_T_C_s__c</fullName>
    <label>Annual price increase on T&amp;C&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>