force-app/main/default/objects/Opportunity/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-3616</description>
    <label>API</label>
    <type>Checkbox</type>
</CustomField>