force-app/main/default/objects/Opportunity/fields/ARR_Rank_Ranger__c.field-meta.xml
<CustomField>
    <fullName>ARR_Rank_Ranger__c</fullName>
    <description>MIS-2924</description>
    <label>ARR - Rank Ranger</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>