force-app/main/default/objects/Opportunity/fields/As_List_Price__c.field-meta.xml
<CustomField>
    <fullName>As_List_Price__c</fullName>
    <label>AS List Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>