force-app/main/default/objects/Opportunity/fields/AS_Status__c.field-meta.xml
<CustomField>
    <fullName>AS_Status__c</fullName>
    <label>AS Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>