force-app/main/default/objects/Opportunity/fields/Assigned_CSM_Email__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CSM_Email__c</fullName>
    <description>MIS-4985 - populated by Flow - Opportunity_Record_Triggered_Flow_Before_Save</description>
    <label>Assigned CSM Email</label>
    <type>Email</type>
</CustomField>