force-app/main/default/objects/Opportunity/fields/Assigned_CSM_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CSM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-4162</description>
    <label>Assigned CSM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSM_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>