force-app/main/default/objects/Opportunity/fields/Assist_For_PB__c.field-meta.xml
<CustomField>
    <fullName>Assist_For_PB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field in used as an assisting field in &apos;Opportunity end of Subscription Alerts&apos; PB.
Created to update Opps so that they trigger the PB.</description>
    <label>Assist For PB Subscription Alerts</label>
    <type>Checkbox</type>
</CustomField>