force-app/main/default/objects/Opportunity/fields/Base_product__c.field-meta.xml
<CustomField>
    <fullName>Base_product__c</fullName>
    <description>MIS-893 Base Product on Opp</description>
    <label>Base product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>