force-app/main/default/objects/Opportunity/fields/Billing_Processing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Billing_Processing_Instructions__c</fullName>
    <description>Will be populated from child case</description>
    <label>Billing Processing Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>