force-app/main/default/objects/Opportunity/fields/Bintray_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Bintray_Entitlement__c</fullName>
    <label>Bintray Entitlement</label>
    <length>80</length>
    <type>Text</type>
</CustomField>