force-app/main/default/objects/Opportunity/fields/Bintray_ID__c.field-meta.xml
<CustomField>
    <fullName>Bintray_ID__c</fullName>
    <label>Bintray ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>