force-app/main/default/objects/Opportunity/fields/Bintray_Password__c.field-meta.xml
<CustomField>
    <fullName>Bintray_Password__c</fullName>
    <label>Bintray Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>