force-app/main/default/objects/Opportunity/fields/Bookings_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Amount__c</fullName>
    <label>Bookings Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>