force-app/main/default/objects/Opportunity/fields/Bypass_Owner_Change_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Owner_Change_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created in order to allow reverting of opp owner changes from the class: RevertClosedOppOwnerQueueable</description>
    <label>Bypass Owner Change Validation</label>
    <type>Checkbox</type>
</CustomField>