force-app/main/default/objects/Opportunity/fields/Capability_align_with_criteria_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Capability_align_with_criteria_Evidence__c</fullName>
    <label>Capability align with criteria–Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>