force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-2043</description>
    <inlineHelpText>Who at the company with influence is advocating on your behalf?</inlineHelpText>
    <label>Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Champion)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>