force-app/main/default/objects/Opportunity/fields/Champion_Advocating_AI_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Champion_Advocating_AI_Evidence__c</fullName>
    <label>Champion Advocating - AI Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>