force-app/main/default/objects/Opportunity/fields/Champion_AI__c.field-meta.xml
<CustomField>
    <fullName>Champion_AI__c</fullName>
    <description>MIS-7356</description>
    <label>Champion: AI</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>