force-app/main/default/objects/Opportunity/fields/Champion_AI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Champion_AI_Feedback__c</fullName>
    <description>MIS-7356</description>
    <label>Champion: AI Feedback</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>