force-app/main/default/objects/Opportunity/fields/Champion_Title__c.field-meta.xml
<CustomField>
    <fullName>Champion_Title__c</fullName>
    <description>MIS-4112</description>
    <label>Champion Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>