force-app/main/default/objects/Opportunity/fields/Churn_protected__c.field-meta.xml
<CustomField>
    <fullName>Churn_protected__c</fullName>
    <description>#1110823 Requested by Finance. Populates manually</description>
    <inlineHelpText>Please enter a date</inlineHelpText>
    <label>Churn protected</label>
    <type>Date</type>
</CustomField>