force-app/main/default/objects/Opportunity/fields/Client_biz_challenge_AI_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Client_biz_challenge_AI_Evidence__c</fullName>
    <label>Client biz challenge – AI Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>