force-app/main/default/objects/Opportunity/fields/Client_CRM__c.field-meta.xml
<CustomField>
    <fullName>Client_CRM__c</fullName>
    <label>Client CRM</label>
    <type>TextArea</type>
</CustomField>