force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason_2__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason_2__c</fullName>
    <label>Closed Lost Reason # 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>BANT</fullName>
            </value>
            <value>
                <fullName>Service / Relationship</fullName>
            </value>
            <value>
                <fullName>Company Structure / Human Resources</fullName>
            </value>
            <value>
                <fullName>Commercial Terms</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Duplicate / Part of Another Opp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>