force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason_3__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason_3__c</fullName>
    <label>Closed Lost Reason # 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Closed_Lost_Reason_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Missing a feature</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Data accuracy</fullName>
            </value>
            <value>
                <fullName>Human resources - no one to use the tool</fullName>
            </value>
            <value>
                <fullName>One time project</fullName>
            </value>
            <value>
                <fullName>Already get data from my agency</fullName>
            </value>
            <value>
                <fullName>Unresponsive or lost contact/champion</fullName>
            </value>
            <value>
                <fullName>Internal/Technical</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t see value</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>