force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>old Closed Lost Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Gap - Client did not agree to Annual payment</fullName>
            </value>
            <value>
                <fullName>Client Gap - Client did not agree to Legal terms</fullName>
            </value>
            <value>
                <fullName>Client Gap - Company Reorg/M&amp;A/Closing</fullName>
            </value>
            <value>
                <fullName>Client Gap - Customer refused annual price increase</fullName>
            </value>
            <value>
                <fullName>Client Gap - Getting data from SW competitor</fullName>
            </value>
            <value>
                <fullName>Client Gap - Insufficient Budget</fullName>
            </value>
            <value>
                <fullName>Client Gap - Receiving data from Agency/Third Party</fullName>
            </value>
            <value>
                <fullName>Client Gap - SimilarWeb chose not to sell or renew (Frenemy, Competitor)</fullName>
            </value>
            <value>
                <fullName>Client Gap - Unresponsive/Lost stakeholder</fullName>
            </value>
            <value>
                <fullName>Integration / Tech</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Low panel Value</fullName>
            </value>
            <value>
                <fullName>Merged with/rolled into another opp/account</fullName>
            </value>
            <value>
                <fullName>No response from the partner</fullName>
            </value>
            <value>
                <fullName>Not for-analyzed</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Relationship - Insufficient touchpoints/onboarding/education</fullName>
            </value>
            <value>
                <fullName>Relationship - No need for upsell offering</fullName>
            </value>
            <value>
                <fullName>Relationship - No relationship with decision making authority</fullName>
            </value>
            <value>
                <fullName>Relationship - Not the right time for the customer (they were interested)</fullName>
            </value>
            <value>
                <fullName>Relationship - We started the renewal process too late</fullName>
            </value>
            <value>
                <fullName>Relationship - We tried selling to the wrong department</fullName>
            </value>
            <value>
                <fullName>Relationship - Working with few/wrong teams for company’s use case(s)</fullName>
            </value>
            <value>
                <fullName>Service / Relationship</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Data Accuracy Discrepancies</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Missing Coverage (country / platform)</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Missing Feature / Granularity</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Pricing and packaging unfit for use case</fullName>
            </value>
            <value>
                <fullName>Solution Gap - Pricing of upsell offering was too high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>