force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason_More_details_2__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason_More_details_2__c</fullName>
    <label>Closed Lost Reason - More details # 2</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>