force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason_More_details__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason_More_details__c</fullName>
    <inlineHelpText>What would have helped you close the deal?</inlineHelpText>
    <label>Closed Lost Reason - More details</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>